# 2024_seminer

./: .gitignore  README.md  diffusion_model_demo.py  generate_image.py  pyproject.toml
colab/: 2024_urulab_seminar.ipynb
