[tool.poetry]
name = "2024-seminer"
version = "0.1.0"
description = ""
authors = ["gilmiwired"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
tqdm = "^4.67.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
